# backend-interview

./: README.md  manage.py  pyproject.toml  requirements.txt
interviewtest/: asgi.py  settings.py  urls.py  wsgi.py
