[tool.poetry]
name = "backend-interview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend_interview"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.6"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
